Fixed text alignment

--- a/game.css
+++ b/game.css
@@ -21,7 +21,7 @@
 
 #rules{
     display: flex;
-    height: 40px;
+    height: 50px;
     width: 50vw;
     padding-top: 10px;
     flex-direction: row;
@@ -30,7 +30,7 @@
     gap: 5vw;
 }
 #rules > *{
-    width: 60px;
+    width: 7vw;
     height: 30px;
     text-align: center;
     color: rgb(226, 217, 250);
@@ -83,8 +83,6 @@
   align-items: center;
   justify-content: center;
   background-color: black;
-  text-align: center;
-  text-justify: center;
 }
 #status > *{
   font-size: 1.75em;
@@ -92,6 +90,8 @@
   width: 90%;
   display: flex;
   align-items: center;
+  justify-content: center;
+  text-align: center;
 }
 
 #scores{
